# hexlet-flask

./: .env  data.json  example.py  pyproject.toml
templates/users/: auth.html  delete.html  edit.html  index.html  new.html  show.html
